correction z-index Nav

--- a/Iteration2,3/grid,flex/style.css
+++ b/Iteration2,3/grid,flex/style.css
@@ -51,6 +51,7 @@ nav{
     position: sticky;
     top: 0;
     height: 100vh;
+    z-index: 2;
 
     background-color: rgb(151, 214, 250);
 }
